﻿Version 0.9 - compatible ONLY with A16.2 (b7)

- Fixed bug that would trigger automatic fixing of power chunks also on unrelated errors
- Fixed error message on import of rotated prefab with /all option


Version 0.8 - compatible ONLY with A16.2 (b7)

- Added command dj-regen to regenerate and redecorate chunks
- Added automatic mode to dj-check-power
- Improved parameter parsing and error messages


Version 0.7 - compatible ONLY with A16.2 (b7)

- Improved dj-import/dj-export command to fully support electricity blocks and wires
- Improved fixing algorithm in dj-check-power command to be more sustainable
- Added checks in dj-check-power to find other power-related corruption problems


Version 0.6 - compatible ONLY with A16.2 (b7)

- Updated compatibility to 7DTD A16.2 (b7)
- Fixed a bug where permissions for script commands could not be set
- Extended dj-check-tripwires to repair ALL power triggers: Switch, PressurePlate, TimerRelay, Motion, TripWire
- Renamed dj-check-tripwires to dj-check-power to reflect the broader usecase
- Added command dj-pos to show exended informaton about current player's position
- Added error checks on all commands


Version 0.5 - compatible ONLY with 7DTD A16.1 (b1)

- Improved compatibility with Assembly-CSharp.dll to (hopefully) support future versions
- Added LICENSE.txt to credit the mod and all included third-party software properly
- Fixed import/export commands to correctly consider player's underground positions when clipping is off
- Fixed a bug where reloading chunks after dj-import could lead to a KeyNotFoundException
- Added command dj-check-tripwires to check and repair corrupt tripwire data


Version 0.4 - compatible ONLY with 7DTD A16.1 (b1)

- Built-in maintenance commands: dj-version, dj-reset-lua, dj-reset-js
- Added obfuscation until source code is released


Version 0.3-internal - compatible ONLY with 7DTD A16.1 (b1)

- Update to A16.1 (b1)