@@ -2,6 +2,7 @@
 
 - Fixed bug that would trigger automatic fixing of power chunks also on unrelated errors
 - Fixed error message on import of rotated prefab with /all option
+- Fixed occasional error "Could not add newly generated chunk to cache." in dj-regen command
 
 
 Version 0.8 - compatible ONLY with A16.2 (b7)
